Bug fix and all authentication logic implemented

--- a/mail/template/confirmation.html
+++ b/mail/template/confirmation.html
@@ -164,7 +164,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td align="center" bgcolor="#1a82e2" style="border-radius: 6px;">
-                                                <a href="https://forgolang.com/confirmation/{{.UserID}}/{{.Code}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Activate your account</a>
+                                                <a href="https://forgolang.com/auth/confirmation/{{.UserID}}/{{.Code}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Activate your account</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -179,7 +179,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-                        <p style="margin: 0;"><a href="https://forgolang.com/confirmation/{{.UserID}}/{{.Code}}" target="_blank">https://forgolang.com/confirmation/{{.UserID}}/{{.Code}}</a></p>
+                        <p style="margin: 0;"><a href="https://forgolang.com/auth/confirmation/{{.UserID}}/{{.Code}}" target="_blank">https://forgolang.com/confirmation/{{.UserID}}/{{.Code}}</a></p>
                     </td>
                 </tr>
                 <!-- end copy -->
