--- a/mail/template/confirmation.html
+++ b/mail/template/confirmation.html
@@ -106,7 +106,7 @@
 
 <!-- start preheader -->
 <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-    A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+    Confirm Your Email Address.
 </div>
 <!-- end preheader -->
 
@@ -179,7 +179,7 @@
                 <tr>
                     <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                         <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-                        <p style="margin: 0;"><a href="https://forgolang.com/auth/confirmation/{{.UserID}}/{{.Code}}" target="_blank">https://forgolang.com/confirmation/{{.UserID}}/{{.Code}}</a></p>
+                        <p style="margin: 0;"><a href="https://forgolang.com/auth/confirmation/{{.UserID}}/{{.Code}}" target="_blank">https://forgolang.com/auth/confirmation/{{.UserID}}/{{.Code}}</a></p>
                     </td>
                 </tr>
                 <!-- end copy -->
