--- a/mail/template/welcome.html
+++ b/mail/template/welcome.html
@@ -106,7 +106,7 @@
 
 <!-- start preheader -->
 <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-    A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+    Thank you for signing up for forgolang.com.
 </div>
 <!-- end preheader -->
 
